--- a/LedenAdministratie/templates/login.html
+++ b/LedenAdministratie/templates/login.html
@@ -15,44 +15,31 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
-
-    <style>
-        .vertical-center {
-          min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-          min-height: 100vh; /* These two lines are counted as one :-)       */
-
-          display: flex;
-          align-items: center;
-        }
-    </style>
-
+    <link href="{% static 'css/master.css' %}" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2 vertical-center mx-auto">
-            <div class="card shadow">
-                <div class="card-body">
-                    <div class="card-header text-white bg-secondary mb-3">Inloggen</div>
+<ul class="list-group container center-a" style="max-width:35em;">
+    <li class="list-group-item bg-dark text-light text-center">
+        <h3>Inloggen</h3>
+    </li>
+    <form method="post" class="form-signin">
+        {% csrf_token %}
 
-                    <form method="post" class="form-signin">
-                        {% csrf_token %}
+        <li class="list-group-item">
+            <label for="id_username" class="mt-3">Your username</label>
+            {{ form.username|add_class:'form-control'|attr:'placeholder:Gebruikersnaam' }}
 
-                        <label for="username" class="sr-only">Your username</label>
-                        {{ form.username|add_class:'form-control'|attr:'placeholder:Gebruikersnaam' }}
+            <label for="id_password" class="mt-3">Your password</label>
+            {{ form.password|add_class:'form-control mb-4'|attr:'placeholder:Wachtwoord' }}
+        </li>
 
-                        <label for="password" class="sr-only">Your password</label>
-                        {{ form.password|add_class:'form-control'|attr:'placeholder:Wachtwoord' }}
-
-                        <button class="btn btn-primary btn-block mt-3" type="submit">Inloggen</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+        <li class="list-group-item">
+            <button class="btn btn-secondary btn-block mt-3" type="submit">Inloggen</button>
+        </li>
+    </form>
+</ul>
 
 </body>
 </html>
