Fix issue #2, add missing fields

--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -32,6 +32,9 @@
 
                         <label for="id_aanmeld_datum">Afmeld datum</label>
                         {{ form.afmeld_datum|add_class:'form-control' }}
+
+                        <label for="id_hoe_gevonden">Hoe gevonden?</label>
+                        {{ form.hoe_gevonden|add_class:'form-control' }}
                     </div>
                     <div class="col-md-5">
                         <label for="id_last_name">Achternaam *</label>
