--- a/LedenAdministratie/templates/invoice_create.html
+++ b/LedenAdministratie/templates/invoice_create.html
@@ -103,7 +103,7 @@
 {% endblock %}
 
 {% block customscript %}
-<script language="JavaScript">
+<script>
 
     $(document).ready(function() {
         var $selectAll = $('#selectAll'); // main checkbox inside table thead
