Invoice sending, unfinished

--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -69,7 +69,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'invoice_send' %}">
                             <span data-feather="mail"></span>Versturen
                         </a>
                     </li>
