--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -27,10 +27,10 @@
                         <label for="id_gebdat">Geboorte datum *</label>
                         {{ form.gebdat|add_class:'form-control' }}
 
-                        <label for="id_aanmeld_datum">Aanmeld datum *</label>
+                        <label for="id_aanmeld_datum">Datum aanmelding *</label>
                         {{ form.aanmeld_datum|add_class:'form-control' }}
 
-                        <label for="id_aanmeld_datum">Afmeld datum</label>
+                        <label for="id_aanmeld_datum">Datume einde lidmaatschap</label>
                         {{ form.afmeld_datum|add_class:'form-control' }}
 
                         <label for="id_hoe_gevonden">Hoe gevonden?</label>
