--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -30,7 +30,7 @@
                         <label for="id_aanmeld_datum">Datum aanmelding *</label>
                         {{ form.aanmeld_datum|add_class:'form-control' }}
 
-                        <label for="id_aanmeld_datum">Datume einde lidmaatschap</label>
+                        <label for="id_aanmeld_datum">Datum einde lidmaatschap</label>
                         {{ form.afmeld_datum|add_class:'form-control' }}
 
                         <label for="id_hoe_gevonden">Hoe gevonden?</label>
