Add invoice reminder (unfinished)

--- a/LedenAdministratie/templates/invoice_send.html
+++ b/LedenAdministratie/templates/invoice_send.html
@@ -54,7 +54,8 @@
             </tbody>
         </table>
 
-        <input type="submit" class="btn btn-primary" value="Versturen">
+        <input type="submit" name="send"     class="btn btn-primary" value="Versturen">
+        <input type="submit" name="reminder" class="btn btn-primary" value="Reminder">
     </div>
 
 </form>
