--- a/LedenAdministratie/templates/invoice_send.html
+++ b/LedenAdministratie/templates/invoice_send.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="alert alert-info bg-secondary text-white" xmlns="http://www.w3.org/1999/html">
-    Aantal nog te versturen facturen:
+    Aantal nog openstaande facturen:
     <span class="badge badge-light">{{ object_list.count }}</span>
 </div>
 
@@ -25,7 +25,6 @@
                 <th>Bedrag</th>
                 <th>Openstaand bedrag</th>
                 <th></th>
-                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -44,9 +43,6 @@
                     <td>{{ invoice.amount }}</td>
                     <td>{{ invoice.amount_unpayed }}</td>
 
-                    <td><a class="btn-sm btn-secondary" href="{% url 'invoice_pay_part' invoice.pk %}"><span
-                            data-feather="send"></span></a></td>
-
                     <td><a target="_blank" href="{% url 'invoice_display' invoice.id %}"><span
                             data-feather="eye"></span></a></td>
                 </tr>
@@ -54,8 +50,55 @@
             </tbody>
         </table>
 
-        <input type="submit" name="send"     class="btn btn-primary" value="Versturen">
-        <input type="submit" name="reminder" class="btn btn-primary" value="Reminder">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sendModal">
+          Versturen
+        </button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#reminderModal">
+          Herinnering
+        </button>
+
+        <!-- sendModal -->
+        <div class="modal fade" id="sendModal" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="sendModalLabel">Facturen versturen?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Weet u zeker dat u de geselecteerde facturen wilt versturen?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
+                <input type="submit" name="send" class="btn btn-primary" value="Versturen">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- reminderModal -->
+        <div class="modal fade" id="reminderModal" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="reminderModalLabel">Herinnering versturen?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Weet u zeker dat u voor de geselecteerde facturen een herinnering wil sturen?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
+                <input type="submit" name="reminder" class="btn btn-primary" value="Versturen">
+              </div>
+            </div>
+          </div>
+        </div>
+
     </div>
 
 </form>
