--- a/LedenAdministratie/templates/send_invoice_reminder.html
+++ b/LedenAdministratie/templates/send_invoice_reminder.html
@@ -6,7 +6,8 @@ Beste ouders/verzorgers van {{ invoice.member.full_name }},<br>
 Beste {{ invoice.member.full_name }},<br>
 {% endif %}
 <br>
-Hierbij sturen wij de factuur voor de contributie van {{ invoice.created.year }}.<br>
+Volgens onze administratie is de bijgevoegde factuur nog niet betaald.<br>
+Graag zien wij de betaling van deze factuur alsnog tegemoet.<br>
 <br>
 <br>
 Met vriendelijke groet,<br>
