--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -21,6 +21,8 @@
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-2 mr-0" href="{% url 'members' %}">Leden DJO</a>
+    {% block searchbar %}
+    {% endblock %}
 </nav>
 
 <div class="container-fluid">
