--- a/LedenAdministratie/templates/memberlist.html
+++ b/LedenAdministratie/templates/memberlist.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block searchbar %}
+    <input class="form-control form-control-dark w-100" type="text" placeholder="Zoeken..." id="searchbar">
+{% endblock %}
 
 {% block content %}
 
@@ -8,7 +13,7 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-hover table-sm">
+        <table class="table table-hover table-sm" id="membersTable">
             <thead class="thead-light">
             <tr>
                 <th>Naam</th>
@@ -58,4 +63,8 @@
         </table>
     </div>
 
+{% endblock %}
+
+{% block customscript %}
+<script src="{% static 'js/search.js' %}"></script>
 {% endblock %}
