Add table sorting

--- a/LedenAdministratie/templates/invoice_payment.html
+++ b/LedenAdministratie/templates/invoice_payment.html
@@ -98,5 +98,5 @@
 
 
 {% block customscript %}
-<script src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/search_and_sort.js' %}"></script>
 {% endblock %}
