--- a/LedenAdministratie/templates/memberlist.html
+++ b/LedenAdministratie/templates/memberlist.html
@@ -66,5 +66,5 @@
 {% endblock %}
 
 {% block customscript %}
-<script src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/search_and_sort.js' %}"></script>
 {% endblock %}
