Allow blank phone number

--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -75,7 +75,7 @@
                         <label for="id_email_address">E-mail adres *</label>
                         {{ form.email_address|add_class:'form-control' }}
 
-                        <label for="id_telnr">Tel. Nummer *</label>
+                        <label for="id_telnr">Tel. Nummer</label>
                         {{ form.telnr|add_class:'form-control' }}
 
                         <label for="id_email_ouders">E-mail Ouders</label>
