Implement a (very) basic e-mail sending functionality

--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -78,10 +78,10 @@
                         <label for="id_telnr">Tel. Nummer</label>
                         {{ form.telnr|add_class:'form-control' }}
 
-                        <label for="id_email_ouders">E-mail Ouders</label>
+                        <label for="id_email_ouders">E-mail Ouders *</label>
                         {{ form.email_ouders|add_class:'form-control' }}
 
-                        <label for="id_telnr_ouders">Tel. Nummer Ouders</label>
+                        <label for="id_telnr_ouders">Tel. Nummer Ouders *</label>
                         {{ form.telnr_ouders|add_class:'form-control' }}
                     </div>
                     <div class="col-2">
