--- a/LedenAdministratie/templates/email_list.html
+++ b/LedenAdministratie/templates/email_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -34,4 +35,8 @@
         </table>
     </div>
 
+{% endblock %}
+
+{% block customscript %}
+<script src="{% static 'js/search_and_sort.js' %}"></script>
 {% endblock %}
