Enable sorting on 'Invoice send' page

--- a/LedenAdministratie/templates/invoice_send.html
+++ b/LedenAdministratie/templates/invoice_send.html
@@ -107,4 +107,5 @@
 
 {% block customscript %}
     <script src="{% static 'js/checkbox.js' %}"></script>
+    <script src="{% static 'js/search_and_sort.js' %}"></script>
 {% endblock %}
