- Add invoice type '2 dagen', implements #13 - Remove hardcoded invoice amounts and move them to settings

--- a/LedenAdministratie/templates/invoice/invoice.html
+++ b/LedenAdministratie/templates/invoice/invoice.html
@@ -15,6 +15,7 @@
         Stichting De Jonge Onderzoekers
         Computerweg 20A
         3821 AB Amersfoort
+        KvK Nr. 41188622
       </address>
 
       <address id="to">
