--- a/LedenAdministratie/templates/email_list.html
+++ b/LedenAdministratie/templates/email_list.html
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for email in object_list %}
+                {% for email in page_obj %}
                 <tr>
                     <td>{{ email.sent }}</td>
                     <td>{{ email.subject|truncatechars:100 }}</td>
@@ -38,6 +38,22 @@
             </tbody>
         </table>
     </div>
+
+    {% if paginator.num_pages > 1 %}
+    <nav aria-label="Paging">
+      <ul class="pagination">
+        {% if page_obj.has_previous %}
+          <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+        {% endif %}
+        {% for pagenr in paginator.page_range %}
+          <li class="page-item {% if pagenr == page_obj.number %}active{% endif %}"><a class="page-link" href="?page={{ pagenr }}">{{ pagenr }}</a></li>
+        {% endfor %}
+        {% if page_obj.has_next %}
+          <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% endif %}
+      </ul>
+    </nav>
+    {% endif %}
 
 {% endblock %}
 
