--- a/LedenAdministratie/templates/emails/welcome_email.html
+++ b/LedenAdministratie/templates/emails/welcome_email.html
@@ -2,7 +2,7 @@
 
 Beste {{ member.first_name }},<br>
 <br>
-Welkom bij DJO Amersfoort! Bijgesloten een PDF met daarin alles wat je nodig hebt om snel van start te kunnen gaan. Veel plezier!<br>
+Welkom bij DJO Amersfoort! Bijgesloten vind je een PDF met daarin alles wat je nodig hebt om snel van start te kunnen gaan. Veel plezier!<br>
 <br>
 Met vriendelijke groeten,<br>
 <a href="https://www.djoamersfoort.nl">DJO Amersfoort</a><br>
