Move some settings (invoice amounts, pdf location) to the database and make them configurable in the UI

--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -121,6 +121,11 @@
                            <span data-feather="file-text"></span>Excel Export</a>
                    </li>
 
+                   <li class="nav-item">
+                       <a class="nav-link" href="{% url 'settings' %}">
+                           <span data-feather="settings"></span>Instellingen</a>
+                   </li>
+
                  </ul>
                  <ul class="nav flex-column mt-4 mb-1">
                     <li><a class="nav-link" href="{% url 'logoff' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
