Pin django-tinymce to 2.9.0, v3 seems broken

--- a/LedenAdministratie/templates/email_send.html
+++ b/LedenAdministratie/templates/email_send.html
@@ -35,10 +35,10 @@
                         <label for="id_subject">Onderwerp</label>
                         {{ form.subject|add_class:'form-control' }}
 
-                        <label for="id_subject">E-mail</label>
+                        <label for="id_body">E-mail</label>
                         {{ form.body|add_class:'form-control' }}
 
-                        <label for="id_subject">Attachment</label>
+                        <label for="id_attachment">Attachment</label>
                         {{ form.attachment|add_class:'form-control' }}
                     </div>
                 </div>
