Update. naar laatste djo

--- a/LedenAdministratie/templates/export.html
+++ b/LedenAdministratie/templates/export.html
@@ -1,31 +1,20 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
 
-{% block navbar %}
-    <ul class="nav nav-sidebar">
-        {% for taktag, takname in speltakken %}
-
-            <li {% if speltak == taktag %} class="active" {% endif %}>
-                <a href="{% url 'ledenlijst' taktag %}">{{ takname }}</a>
-            </li>
-
-        {% endfor %}
-
-    </ul>
-{% endblock %}
-
 {% block content %}
 
-    <div class="container col-lg-offset-1 col-lg-2">
-
+<br/>
+<div class="container col-md-2">
+    <div class="card">
+        <div class="card-header">Selecteer de te exporteren lijst</div>
         <form method="post">
             {% csrf_token %}
-            <label for="id_speltak">Speltak</label>
-            {{ form.speltak|add_class:'form-control' }}
-            <br>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Exporteren</button>
+            <!-- <label for="id_speltak">Lijst</label> -->
+            {{ form.filter_slug|add_class:'form-control' }}
+            <br/>
+            <button class="btn btn-success btn-block" type="submit">Exporteren</button>
         </form>
-
     </div>
+</div>
 
 {% endblock %}
