--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -1,77 +1,133 @@
+{% load l10n %}
 {% load staticfiles %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ledensite St. Ansfridus">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Ledensite DJO">
 
-    <title>Ledenadministratie St. Ansfridus</title>
+    <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <style>
-        .table-responsive {
-            width: 100%;
-            height: 100%;
-            overflow: visible;
-        }
-    </style>
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'ledenlijst' 'wachtlijst' %}">Ledenadministratie St. Ansfridus</a>
-        </div>
-    </div>
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-2 mr-0" href="{% url 'members' %}">Leden DJO</a>
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2 col-md-1 sidebar">
-            {% block navbar %}
+    <div class="row mt-2">
+        <nav class="col-2 d-none d-block bg-light sidebar">
+            <div class="sidebar-sticky">
+
+                {% block navbar %}
+                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                        <span>Leden</span>
+                    </h6>
+
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a {% if filter_slug == '' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'members' %}">
+                                <span data-feather="filter"></span>Alle leden
+                            </a>
+                        </li>
+
+                        {% for type in types %}
+                            <li class="nav-item">
+                                <a {% if filter_slug == type.slug %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'members' type.slug %}">
+                                    <span data-feather="filter"></span>{{ type.display_name }}
+                                </a>
+                            </li>
+                        {% endfor %}
+
+                        {% if perms.LedenAdministratie.change_lid %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'lid_create' %}">
+                                    <span data-feather="user-plus"></span>Nieuw Lid
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                {% endblock %}
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Facturen</span>
+                </h6>
+
+               <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'invoice_create' %}">
+                            <span data-feather="plus-circle"></span>Aanmaken
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'invoice_send' %}">
+                            <span data-feather="mail"></span>Versturen
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'invoice_payment' %}">
+                            <span data-feather="dollar-sign"></span>Betaling verwerken
+                        </a>
+                    </li>
+               </ul>
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Overig</span>
+                </h6>
+
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'todolist' %}">
+                            <span data-feather="calendar"></span>Todo lijst
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'export' %}">
+                            <span data-feather="file-text"></span>Excel Export</a>
+                    </li>
+
+                    {% if request.user.is_superuser %}
+                    <li>
+                        <a class="nav-link" href="/admin/">
+                            <span data-feather="users"></span>Gebruikers</a>
+                    </li>
+                    {% endif %}
+                </ul>
+
+                <ul class="nav flex-column mt-4 mb-1">
+                    <li><a class="nav-link" href="{% url 'logoff' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <main role="main" class="col-10 ml-auto">
+            {% block content %}
             {% endblock %}
-
-            <ul class="nav nav-sidebar">
-                {% if perms.LedenAdministratie.change_lid %}
-                    <li><a href="{% url 'lid_create' %}">Nieuw Lid</a></li>
-                {% endif %}
-                <li><a href="{% url 'export' %}">Excel Export</a></li>
-                {% if request.user.is_superuser %}
-                    <li><a href="/admin/">Gebruikers</a></li>
-                {% endif %}
-            </ul>
-            <ul class="nav nav-sidebar">
-                <li><a href="{% url 'logoff' %}">Uitloggen</a></li>
-            </ul>
-        </div>
-
-        <div class="col-sm-10 col-sm-offset-2 col-md-11 col-md-offset-1 main">
-        {% block content %}
-        {% endblock %}
-        </div>
+        </main>
     </div>
 </div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery.slim.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/feather.min.js' %}"></script>
+<script>feather.replace()</script>
+
+{% block customscript %}
+{% endblock %}
+
 </body>
 </html>
