--- a/LedenAdministratie/templates/login.html
+++ b/LedenAdministratie/templates/login.html
@@ -1,50 +1,45 @@
 {% load staticfiles %}
 {% load widget_tweaks %}
-{% load socialaccount %}
 
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Ledenadministratie St. Ansfridus</title>
+    <title>Ledenadministratie DJO</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/signin.css' %}" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
+    <link href="{% static 'css/master.css' %}" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
 
-<div class="container">
-
+<ul class="list-group container center-a" style="max-width:35em;">
+    <li class="list-group-item bg-dark text-light text-center">
+        <h3>Inloggen</h3>
+    </li>
     <form method="post" class="form-signin">
         {% csrf_token %}
 
-        <h2 class="form-signin-heading">Inloggen</h2>
-        <label for="username" class="sr-only">Scouting.nl Login</label>
-        {{ form.username|add_class:'form-control'|attr:'placeholder:Gebruikersnaam' }}
+        <li class="list-group-item">
+            <label for="id_username" class="mt-3">Your username</label>
+            {{ form.username|add_class:'form-control'|attr:'placeholder:Gebruikersnaam' }}
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Inloggen</button>
+            <label for="id_password" class="mt-3">Your password</label>
+            {{ form.password|add_class:'form-control mb-4'|attr:'placeholder:Wachtwoord' }}
+        </li>
+
+        <li class="list-group-item">
+            <button class="btn btn-secondary btn-block mt-3" type="submit">Inloggen</button>
+        </li>
     </form>
-
-</div> <!-- /container -->
+</ul>
 
 </body>
 </html>
