feat: add custom login page (thanks @sverben)

--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -128,7 +128,7 @@
 
                  </ul>
                  <ul class="nav flex-column mt-4 mb-1">
-                    <li><a class="nav-link" href="{% url 'logoff' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
+                    <li><a class="nav-link" href="{% url 'logout' %}"><span data-feather="log-out"></span>Uitloggen</a></li>
                  </ul>
             </div>
         </nav>
