fix: always use https for pw reset link

--- a/LedenAdministratie/templates/registration/password_reset_email.html
+++ b/LedenAdministratie/templates/registration/password_reset_email.html
@@ -6,7 +6,7 @@ Je ontvangt deze e-mail omdat je een password reset hebt aangevraagd voor DJO Am
 Je kunt een nieuw password instellen door op de volgende link te klikken:
 
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+https://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 De gebruikersnaam voor jouw DJO account is: {{ user.get_username }}
