--- a/LedenAdministratie/templates/profile.html
+++ b/LedenAdministratie/templates/profile.html
@@ -14,6 +14,11 @@
                 <span data-feather="lock"></span>Password wijzigen
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'oauth2_provider:list' %}">
+                <span data-feather="settings"></span>OAuth2 applicaties
+            </a>
+        </li>
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
